# check-docstrings

./: .pre-commit-hooks.yaml  .pre-commit-hooks.ymal  README.md  check_docstrings.py  main.py  pyproject.toml
check_docstrings/: main.py
