[build-system]
requires = ["setuptools", "wheel"]

[tool.poetry]
name = "pre_commit_docstring_check"
version = "0.1.0"
description = "A pre-commit hook to check for missing docstrings in Python methods."

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pypi"
url = "https://pypi.org/simple"
secondary = true